// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaModel formula move patches move formula dependency generates replace for formula when dependency is moved 1`] = `
[
  {
    "fieldName": "nested.value",
    "isRename": undefined,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/value",
      "op": "move",
      "path": "/properties/nested/properties/value",
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "sum",
    "patch": {
      "op": "replace",
      "path": "/properties/sum",
      "value": {
        "default": 0,
        "readOnly": true,
        "type": "number",
        "x-formula": {
          "expression": "nested.value + 2",
          "version": 1,
        },
      },
    },
    "propertyChanges": [
      {
        "from": "value + 2",
        "property": "formula",
        "to": "nested.value + 2",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`SchemaModel formula move patches move formula field into nested object generates move + replace when formula field moved to new parent 1`] = `
[
  {
    "fieldName": "nested.sum",
    "isRename": undefined,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/sum",
      "op": "move",
      "path": "/properties/nested/properties/sum",
    },
    "propertyChanges": [
      {
        "from": "value + 2",
        "property": "formula",
        "to": "../value + 2",
      },
    ],
  },
  {
    "fieldName": "nested.sum",
    "patch": {
      "op": "replace",
      "path": "/properties/nested/properties/sum",
      "value": {
        "default": 0,
        "readOnly": true,
        "type": "number",
        "x-formula": {
          "expression": "../value + 2",
          "version": 1,
        },
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "formula",
        "to": "../value + 2",
      },
      {
        "from": undefined,
        "property": "default",
        "to": 0,
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`SchemaModel formula move patches rename formula dependency generates replace for formula when referenced field is renamed 1`] = `
[
  {
    "fieldName": "cost",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/price",
      "op": "move",
      "path": "/properties/cost",
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "total",
    "patch": {
      "op": "replace",
      "path": "/properties/total",
      "value": {
        "default": 0,
        "readOnly": true,
        "type": "number",
        "x-formula": {
          "expression": "cost * quantity",
          "version": 1,
        },
      },
    },
    "propertyChanges": [
      {
        "from": "price * quantity",
        "property": "formula",
        "to": "cost * quantity",
      },
    ],
    "typeChange": undefined,
  },
]
`;
